--- a/give-classes.html
+++ b/give-classes.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/partials/header.css">
     <link rel="stylesheet" href="styles/partials/page-give-classes.css">
+    <link rel="stylesheet" href="styles/partials/footer.css">
     <link rel="stylesheet" href="styles/partials/forms.css">
     <link rel="shortcut icon" href="images/favicon.png" type="image/png">
     
@@ -138,6 +139,13 @@
 
 
         </main>
+
+        <footer id="credits">
+            <div class="credit-text">
+                <p >Made with <img src="images/icons/purple-heart.svg" alt="love"> by <a href="https://github.com/iaglourenco">@iaglourenco</a> 
+                    and hosted with more <img src="images/icons/purple-heart.svg" alt="love"> by <a href="https://github.com/proffy">GitHub</a></p>    
+            </div>
+        </footer>
     </div>
 
 
