--- a/give-classes.html
+++ b/give-classes.html
@@ -25,7 +25,7 @@
     <div id="container">
         <header class="page-header">
             <div class="top-bar-container">
-                <a href="/index.html">
+                <a href="/proffy/index.html">
                 <img src="images/icons/back.svg" alt="Voltar">
                 </a>
                 <img src="images/logo.svg" alt="Proffy">
