--- a/index.html
+++ b/index.html
@@ -19,8 +19,6 @@
 
 <body id="page-landing">
     
-
-   
         <div id="container">   
             <div class="logo-container">
                 <img src="images/logo.svg" alt="Proffy">
@@ -31,12 +29,12 @@
         
 
             <div class="buttons-container">
-                <a class="study" href="/study.html">
+                <a class="study" href="/proffy/study.html">
                     <img src="images/icons/study.svg" alt="Estudar">
                     Estudar
                 </a>
 
-                <a class="give-classes" href="/give-classes.html">
+                <a class="give-classes" href="/proffy/give-classes.html">
                     <img src="images/icons/give-classes.svg" alt="Dar aulas">
                     Dar aulas
                 </a>
