Fixed link for the repo

--- a/give-classes.html
+++ b/give-classes.html
@@ -143,7 +143,7 @@
         <footer id="credits">
             <div class="credit-text">
                 <p >Made with <img src="images/icons/purple-heart.svg" alt="love"> by <a href="https://github.com/iaglourenco">@iaglourenco</a> 
-                    and hosted with more <img src="images/icons/purple-heart.svg" alt="love"> by <a href="https://github.com/proffy">GitHub</a></p>    
+                    and hosted with more <img src="images/icons/purple-heart.svg" alt="love"> by <a href="https://github.com/iaglourenco/proffy">GitHub</a></p>    
             </div>
         </footer>
     </div>
